[package]
name = "combine-and-defend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.8.0"
bevy_asset_loader = "0.12.1"
bevy_rapier2d = { version = "0.16.1", default-features = false, features = ["dim2"] }
bevy_tweening = "0.5.0"
ordered-float = "3.0.0"
rand = "0.8.5"

[features]
default = []
debug-render = ["bevy_rapier2d/debug-render"]
